shelter/style.css
/* ... */
.our-friends-slider-card{
    transition: 0.3s;
}

.our-friends-slider-card:hover{
    
    box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
    background-color: var(--color-light-xl);

    &>.learn-more-btn{
        background: var(--color-primary-light);
        border-color: var(--color-primary-light);
    }

    cursor: pointer;
}

.learn-more-btn{
    background-color: transparent;
    border: 2px solid var(--color-primary);
    border-radius: 100px;
    padding: 15px 40px;
    width: 187px;
    text-align: center;

    font-family: var(--font-family);
    font-weight: 400;
    font-size: 17px;
    line-height: 130%;
    letter-spacing: 0.06em;
    color: var(--color-dark-3xl);

    transition: 0.3s;
}

.our-friends-pet-name{
    font-family: var(--font-family);
    font-weight: 400;
    font-size: 20px;
    letter-spacing: 0.06em;
    text-align: center;
    color: var(--color-dark-l);
}

.our-friends-slider-arrow{
    background-color: transparent;
    & > * {
        grid-row: 1/-1;
        align-self: center;
    }

    margin-top: 25px;
}

.our-friends-slider-arrow>svg{
    color: transparent;
    transition: 0.3s;
    stroke: #F1CDB3;
}

.our-friends-slider-arrow>svg:hover{
    stroke: var(--color-primary-light);
    fill: var(--color-primary-light);
}

.get-rest-btn-container{
    display: flex;
    justify-content: center;
    font-family: var(--font-family);
    font-weight: 400;
    font-size: 17px;
    line-height: 130%;
    letter-spacing: 0.06em;
    color: var(--color-dark-3xl);

    padding-top: 28px;
    padding-bottom: 36px;
}

.get-the-rest-btn{

    background: var(--color-primary);
    border-radius: 100px;
    transition: 0.3s;

    font-family: var(--font-family);

    font-weight: 400;
    font-size: 17px;
    line-height: 130%;
    letter-spacing: 0.06em;
    color: var(--color-dark-3xl);

    text-align: center;
    padding: 15px 45px;
}

.get-the-rest-btn:hover{
    background: var(--color-primary-light);
}

.can-help-our-shelter-container{
    background: var(--color-light-xl);
    width: 1280px;
    margin-inline: auto;
}

.help-shelter-title{
    font-family: var(--font-family);
    font-weight: 400;
    font-size: 35px;
    line-height: 130%;
    letter-spacing: 0.06em;
    text-align: center;
    color: var(--color-dark-l);

    padding-top: 82px;
}

.can-help-our-shelter{
    max-width: 1026;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    column-gap: 120px;
    row-gap: 55px;
    padding: 60px 40px 100px 40px;

    &>*{
        display: flex;
        flex-direction: column;
        align-items: center;
        row-gap: 30px;

        &>img{
            width: 60px;
            height: 60px;
        }
    }

    &>* >*{
            font-family: var(--font-family);
            font-weight: 400;
            font-size: 20px;
            line-height: 115%;
            letter-spacing: 0.06em;
            text-align: center;
            color: var(--color-dark-l);
    }
}

.donation-wrapper{
    background: var(--color-light-l);
    background-size: cover;
}

.donation{
    width: 1280px;
    margin-inline: auto;
    /* background: var(--color-light-l); */

    display: grid;
    grid-template-columns: max-content 380px;
    justify-content: center;
    align-items: center;

    font-family: var(--font-family);
    font-weight: 400;

    gap: 30px;

    padding-top: 81px;
    padding-bottom: 100px;
}

.donation-text h2{
    font-family: var(--font-family);
    font-weight: 400;
    font-size: 35px;
    line-height: 128%;
    letter-spacing: 0.06em;
    color: var(--color-dark-l);

    padding-bottom: 20px;
}

.donation-bank-name{
    font-size: 15px;
    line-height: 110%;
    letter-spacing: 0.06em;
    color: var(--color-dark-l);
    padding-bottom: 20px;
}

.card-number-donation{
    border-radius: 9px;
    padding: 10px 15px;
    justify-content: center;

    background: var(--color-primary);

    display: inline-flex;
    flex-direction: row;

    gap: 15px;

    &>*{
        font-family: var(--font-family);
        font-weight: 400;
        font-size: 20px;
        line-height: 115%;
        letter-spacing: 0.06em;
        color: var(--color-dark-l);
    }
}

.card-number-donation{
    transition: 0.3s;
}

.card-number-donation:hover{
    background: var(--color-primary-light);
}

.donation-note{
    font-family: var(--second-family);
    font-style: italic;
    font-size: 12px;
    line-height: 150%;
    color: var(--color-dark-m);
    padding-top: 20px;
}

footer{
    background: url(./assets/img/footer-background.png);
    background-size: cover;

    
}

.footer-contacts{
    width: 1280px;
    margin-inline: auto;

    font-family: var(--font-family);
    font-weight: 400;
    font-size: 35px;
    line-height: 130%;
    letter-spacing: 0.06em;
    color: var(--color-light-xl);

    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: repeat(3, max-content) 1fr;
    align-items: center;

    column-gap: 130px;
    row-gap: 32px;
    padding: 40px 40px 0 40px;

    &>.footer-contact-column{
        display: grid;
        grid-template-rows: subgrid;
        grid-row: 1/-1;
        align-items: center;
    }

    &>img{
        grid-row: 1/-1;
        padding-left: 20px;
    }
}

.footer-contact-point{
    display: flex;
    gap: 18px;
    align-items: center;
    transition: 0.3s;
}

.footer-title{
    font-size: 35px;
    line-height: 130%;
    letter-spacing: 0.06em;
    color: var(--color-light-xl);

    padding-top: 19px;
}

.footer-p{
    font-size: 20px;
    line-height: 115%;
    letter-spacing: 0.06em;
    color: var(--color-primary);
}

.footer-contact-point:hover{
    &>.footer-p{
        color: var(--color-primary-light);
    }
}




.logo-pets-title{
    color: var(--color-dark-l);
}

.logo-pets-subtitle{
    color: var(--color-dark-3xl);
}
/* ... */

